# rust-setup-wp

./: Cargo.toml  README.md
src/: main.rs
