[package]
name = "setup-wp"
version = "1.0.0"
authors = ["Jascha030 <contact@jaschavanaalst.nl>"]
description = "CLI command to quickly create a wordpress bedrock environment with database."
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
homepage = "https://github.com/jascha030/rust-setup-wp"
repository = "https://github.com/jascha030/rust-setup-wp"
keywords = ["cli", "scaffold", "wordpress", "bedrock"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3.23"
rpassword = "5.0.1"
mysql = "21.0.1"